--- a/book/book.tex
+++ b/book/book.tex
@@ -15890,7 +15890,7 @@ recursion depth exceeded''.  Si eso ocurre, ve a la sección
 ``Recursividad infinita'' de más adelante.
 
 Si no obtienes este error pero sospechas que hay un problema
-con una función recursiva o método recursivo, todavía puedes utilizar las térnicas
+con una función recursiva o método recursivo, todavía puedes utilizar las técnicas
 de la sección ``Recursividad infinita''.
 
 \item Si ninguno de esos pasos funciona, comienza a probar otros
@@ -15944,7 +15944,7 @@ ejecute por un momento y luego produzca un error
 Si sospechas que una función está causando una recursividad
 infinita, asegúrate de que haya un caso base.
 Debería haber alguna condición que cause que la
-función devuelva sin hacer una invocación recursiva.
+función devuelva algo sin hacer una invocación recursiva.
 Si no, necesitas volver a pensar el algoritmo e identificar un caso
 base.
 
@@ -15993,7 +15993,7 @@ Estos son algunos de los errores de tiempo de ejecución más comunes:
 \item[NameError:]  Estás intentando utilizar una variable que no
 existe en el entorno actual.  Revisa si el nombre
 está bien escrito, o al menos de manera consistente.
-Y recuerda que las variables locales son locales; 
+Y recuerda que las variables locales son locales: 
 no puedes referirte a estas desde afuera de la función donde se definieron.
 \index{NameError}
 \index{excepción!NameError}
@@ -16151,7 +16151,7 @@ Pruébalas escribiendo casos de prueba simples y verificando los resultados.
 
 Para programar, necesitas un modelo mental de cómo
 funcionan los programas.  Si escribes un programa que no hace lo que esperas,
-muchas veces el problema no está en el programa; está en tu modelo
+muchas veces el problema no está en el programa: está en tu modelo
 mental.
 \index{modelo mental}
 \index{mental, modelo}
@@ -16282,7 +16282,7 @@ correcto).
 Si te encuentras sufriendo alguno de estos síntomas, levántate
 y ve a dar un paseo.  Cuando te hayas tranquilizado, piensa en el programa.
 ¿Qué está haciendo?  ¿Cuáles son algunas posibles causas de aquel
-comportamiento?  ¿Cuándo fue la última vez que tuviste un programa eficaz,
+comportamiento?  ¿Cuándo fue la última vez que tuviste un programa eficaz
 y qué hiciste después?
 
 A veces solo toma tiempo encontrar un error de programación.  A menudo
