--- a/book/book.tex
+++ b/book/book.tex
@@ -16568,7 +16568,7 @@ y un mal algoritmo no tiene límites!
 En Python, la mayoría de las operaciones aritméticas son de tiempo constante;
 la multiplicación generalmente toma más tiempo que la adición y sustracción, y
 la división toma aún más, pero estos tiempos de ejecución no dependen de la
-magnitud de los operandos.  Los enteros muy grandes son una excepción; en
+magnitud de los operandos.  Los enteros muy grandes son una excepción: en
 ese caso el tiempo de ejecución aumenta con el número de dígitos.
 \index{analysis of primitives}
 
@@ -16671,7 +16671,7 @@ las siguientes preguntas:
 
 \begin{enumerate}
 
-\item ¿Qué es un ``ordenamiento de comparación?'' ¿Cuál es el mejor orden de crecimiento
+\item ¿Qué es un ``ordenamiento de comparación''? ¿Cuál es el mejor orden de crecimiento
   del peor de los casos para un ordenamiento de comparación?  ¿Cuál es el orden de crecimiento
   del peor de los casos para cualquier algoritmo de ordenamiento?
 \index{ordenamiento de comparación}
@@ -16750,7 +16750,7 @@ bueno, comienzo con una implementación simple de un mapa y
 gradualmente lo mejoro hasta que sea una tabla hash.
 \index{tabla hash}\index{hashtable}
 
-Yo uso Python para demostrar estas implementaciones, pero en la vida
+Yo utilizo Python para demostrar estas implementaciones, pero en la vida
 real no escribirías código como este en Python: ¡solo utilizarías un
 diccionario!  Para el resto de este capítulo, tienes que imaginar que
 los diccionarios no existen y quieres implementar una estructura de datos
@@ -16963,7 +16963,7 @@ total para cada añadido en orden de izquierda a derecha: los primeros dos
 
 \begin{figure}
 \centerline{\includegraphics[width=5.5in]{figs/towers.pdf}}
-\caption{The cost of a hashtable add.\label{fig.hash}}
+\caption{El costo de añadir a una tabla hash.\label{fig.hash}}
 \end{figure}
 
 El trabajo extra de rehashear aparece como una secuencia de torres
@@ -16981,7 +16981,7 @@ por cada {\tt add} es lineal.
 
 Puedes descargar mi implementación de HashMap en
 \url{http://thinkpython2.com/code/Map.py}, pero recuerda que no hay
-razón para utilizarla; si quieres un mapa, solo utiliza un diccionario de Python.
+razón para utilizarla: si quieres un mapa, solo utiliza un diccionario de Python.
 
 \section{Glosario}
 
