--- a/book/book.tex
+++ b/book/book.tex
@@ -35,9 +35,9 @@
 
 \hyphenation{Python}
 
-\title{Pensar en Python}
+\title{Think Python}
 \author{Allen B. Downey}
-\newcommand{\thetitle}{Pensar en Python: Aprende a pensar como un informático}
+\newcommand{\thetitle}{Think Python: Aprende a pensar como un informático}
 \newcommand{\theversion}{2da Edición, Versión 2.4.0}
 \newcommand{\thedate}{}
 
@@ -102,7 +102,7 @@
 \vspace*{2.0in}
 
 \begin{spacing}{3}
-{\huge Pensar en Python}\\
+{\huge Think Python}\\
 {\Large Aprende a pensar como un informático}
 \end{spacing}
 
@@ -133,7 +133,7 @@
 \vspace*{2.0in}
 
 \begin{spacing}{3}
-{\huge Pensar en Python}\\
+{\huge Think Python}\\
 {\Large Aprende a pensar como un informático}
 \end{spacing}
 
@@ -291,7 +291,7 @@ corrigiendo errores, mejorando algunos de los ejemplos y agregando material,
 especialmente ejercicios.
 
 El resultado es este libro, ahora con el título menos grandioso
-{\em Pensar en Python} ({\em Think Pyhton}).  Algunos de los cambios son:
+{\em Think Python}.  Algunos de los cambios son:
 
 \begin{itemize}
 
@@ -313,7 +313,7 @@ El resultado es este libro, ahora con el título menos grandioso
 
 \end{itemize}
 
-La segunda edición de {\em Pensar en Python} tiene nuevas características:
+La segunda edición de {\em Think Python} tiene nuevas características:
 
 \begin{itemize}
 
