--- a/book-es/book.tex
+++ b/book-es/book.tex
@@ -6,6 +6,8 @@
 %
 
 % Traducción al español por Jorge Espinoza.
+% Modificada por Carlos Pardo Martín.
+
 
 %\documentclass[10pt,b5paper]{book}
 \documentclass[10pt]{book}
@@ -5621,9 +5623,9 @@ y regresa a la parte superior del bucle.  Aquí hay una ejecución de muestra:
 
 \begin{verbatim}
 > no listo
-no listo
+  no listo
 > listo
-¡Listo!
+  ¡Listo!
 \end{verbatim}
 %
 Esta forma de escribir bucles {\tt while} es común porque puedes
@@ -6550,8 +6552,8 @@ Ahora cuando ejecuto el programa de nuevo, obtengo más información:
 \begin{verbatim}
 >>> es_inverso('pots', 'stop')
     0 4
-...
-IndexError: string index out of range
+    ... 
+    IndexError: string index out of range
 \end{verbatim}
 %
 En el primer paso por el bucle, el valor de {\tt j} es 4,
